cody: fix context files overflow (#53726)

--- a/client/cody-ui/src/chat/TranscriptItem.module.css
+++ b/client/cody-ui/src/chat/TranscriptItem.module.css
@@ -14,12 +14,11 @@
     top: 0;
     left: 0;
 
-    width: .1rem;
+    width: 0.1rem;
     height: 100%;
 
     content: '';
 }
-
 
 .assistant-row:before {
     background-image: linear-gradient(to bottom, #b200f8, #ff5543, #00cbec);
